--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body { 
-            background-image: url(Imagenes/Ciclo_de_Ventas_page-0001.jpg);
+            background-image: url(Imagenes);
             background-size: 1550px 1300px;
             background-color: #f8f9fa; /* Fondo gris claro */
         }
