--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="form-container">
                     <h2>Formulario de Despegue Inicial – THE CLOSERS LA AGENCIA</h2>
 
-                    <form action="https://formsubmit.co/ovrg215@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/aurelianozamorano@gmail.com" method="POST">
                         <input type="hidden" name="_captcha" value="false">
 
                         <div class="mb-4">
